# baas

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/baas/: main.py  models.py
